Use -Xlog:gc instead of -verbose:gc